@@ -17,7 +17,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
  *
- * $Id: packages.c,v 1.13 2004/02/01 16:38:12 waldi Exp $
+ * $Id: packages.c,v 1.14 2004/02/27 23:22:00 waldi Exp $
  */
 
 #include <config.h>
@@ -163,11 +163,12 @@ di_package *di_packages_get_package_new (di_packages *packages, di_packages_allo
   return ret;
 }
 
-static void resolve_dependencies_recurse (di_slist *install, di_package *package, di_package *dependend_package, di_packages_allocator *allocator, unsigned int resolver, int shutup)
+static bool resolve_dependencies_recurse (di_slist *install, di_package *package, di_package *dependend_package, di_packages_allocator *allocator, unsigned int resolver, bool shutup)
 {
-  di_slist_node *node;
+  di_slist_node *node, *node2;
   di_package *best_provide;
 
+  /* did we already check this package? */
   if (!(package->resolver & resolver))
   {
     package->resolver |= resolver;
@@ -179,14 +180,39 @@ static void resolve_dependencies_recurse (di_slist *install, di_package *package
         {
           di_package_dependency *d = node->data;
 
+          /* it's a dependency */
           if (d->type == di_package_dependency_type_depends || d->type == di_package_dependency_type_pre_depends)
           {
-#if 1
+            /* ugh, someone don't respect our policy */
             if (!shutup && package->priority > d->ptr->priority)
-              di_log (DI_LOG_LEVEL_INFO, "broken dependency: %s to %s", package->package, d->ptr->package);
-#endif
-            resolve_dependencies_recurse (install, d->ptr, package, allocator, resolver, shutup);
+              di_log (DI_LOG_LEVEL_INFO, "broken dependency: %s to %s (wrong priority)", package->package, d->ptr->package);
+            /* check recursive */
+            if (!resolve_dependencies_recurse (install, d->ptr, package, allocator, resolver, shutup))
+              return false;
           }
+          else if (d->type == di_package_dependency_type_conflicts)
+            switch (d->ptr->type)
+            {
+              case di_package_type_real_package:
+                if (d->ptr->status == di_package_status_unpacked ||
+                    d->ptr->status == di_package_status_installed)
+                  return false;
+                break;
+              case di_package_type_virtual_package:
+                for (node2 = d->ptr->depends.head; node2; node2 = node2->next)
+                {
+                  di_package_dependency *d = node2->data;
+
+                  if (d->type == di_package_dependency_type_reverse_provides)
+                    if ((d->ptr->status == di_package_status_unpacked ||
+                         d->ptr->status == di_package_status_installed) &&
+                        d->ptr != package)
+                      return false;
+                }
+                break;
+              default:
+                break;
+            }
         }
 
         if (dependend_package)
@@ -199,51 +225,78 @@ static void resolve_dependencies_recurse (di_slist *install, di_package *package
         break;
 
       case di_package_type_virtual_package:
-        best_provide = NULL;
+
+        if (dependend_package)
+          di_log (DI_LOG_LEVEL_DEBUG, "search for package resolving %s, dependency from %s", package->package, dependend_package->package);
 
         for (node = package->depends.head; node; node = node->next)
         {
           di_package_dependency *d = node->data;
 
           if (d->type == di_package_dependency_type_reverse_provides)
-          {
-            if (!best_provide || best_provide->priority < d->ptr->priority
-		|| d->ptr->status == di_package_status_installed)
-              best_provide = d->ptr;
-          }
+            package->resolver &= ~(resolver << 2);
         }
 
-        if (best_provide)
-          resolve_dependencies_recurse (install, best_provide, package, allocator, resolver, shutup);
+        while (1)
+        {
+          best_provide = NULL;
 
-        if (dependend_package && best_provide)
-          di_log (DI_LOG_LEVEL_DEBUG, "search for package resolving %s, dependency from %s", package->package, dependend_package->package);
+          for (node = package->depends.head; node; node = node->next)
+          {
+            di_package_dependency *d = node->data;
+
+            if (d->type == di_package_dependency_type_reverse_provides)
+            {
+              if (!(package->resolver & (resolver << 2)) &&
+                  (!best_provide || best_provide->priority < d->ptr->priority ||
+                   (d->ptr->status == di_package_status_installed && best_provide->status != di_package_status_installed)))
+                best_provide = d->ptr;
+            }
+          }
+
+          if (best_provide)
+          {
+            if (resolve_dependencies_recurse (install, best_provide, package, allocator, resolver, shutup))
+              break;
+            else
+              package->resolver |= (resolver << 2);
+          }
+          else
+            return false;
+        }
+
         break;
 
       case di_package_type_non_existent:
         if (!shutup)
           di_log (DI_LOG_LEVEL_WARNING, "package %s doesn't exist", package->package);
-        break;
+        return false;
     }
+
+    package->resolver |= (resolver << 1);
+    return true;
   }
+
+  return package->resolver & (resolver << 1);
+}
+
+static void resolve_dependencies_marker_reset (void *key __attribute__ ((unused)), void *value, void *user_data __attribute__ ((unused)))
+{
+  di_package *p = value;
+  p->resolver = 0;
 }
 
 static void resolve_dependencies_marker (di_packages *packages)
 {
   if (!packages->resolver)
     packages->resolver = 1;
-  else if (packages->resolver > INT_MAX)
+  else if (packages->resolver > (INT_MAX >> 2))
   {
-    di_slist_node *node;
-    for (node = packages->list.head; node; node = node->next)
-    {
-      di_package *p = node->data;
-      p->resolver = 0;
-    }
+    di_hash_table_foreach (packages->table, resolve_dependencies_marker_reset, NULL);
     packages->resolver = 1;
   }
   else
-    packages->resolver <<= 1;
+    packages->resolver <<= 3;
 
 }
 
@@ -257,7 +310,11 @@ di_slist *di_packages_resolve_dependencies (di_packages *packages, di_slist *lis
   for (node = list->head; node; node = node->next)
   {
     di_package *p = node->data;
-    resolve_dependencies_recurse (install, p, NULL, allocator, packages->resolver, 0);
+    if (!resolve_dependencies_recurse (install, p, NULL, allocator, packages->resolver, false))
+    {
+      di_slist_free (install);
+      return NULL;
+    }
   }
 
   return install;
@@ -270,7 +327,11 @@ di_slist *di_packages_resolve_dependencies_array (di_packages *packages, di_pack
   resolve_dependencies_marker (packages);
 
   while (*array)
-    resolve_dependencies_recurse (install, *array++, NULL, allocator, packages->resolver, 0);
+    if (!resolve_dependencies_recurse (install, *array++, NULL, allocator, packages->resolver, false))
+    {
+      di_slist_free (install);
+      return NULL;
+    }
 
   return install;
 }
@@ -285,7 +346,7 @@ void di_packages_resolve_dependencies_mark (di_packages *packages)
   {
     di_package *package = node->data;
     if (!(package->resolver & packages->resolver) && package->status_want == di_package_status_want_install)
-      resolve_dependencies_recurse (NULL, package, NULL, NULL, packages->resolver, 1);
+      resolve_dependencies_recurse (NULL, package, NULL, NULL, packages->resolver, true);
   }
 }
 
