@@ -1,11 +1,14 @@
 libdebian-installer (0.19.cvs) UNRELEASED; urgency=low
 
   * Bastian Blank
+    - Bump revision to 2.
     - Add conversation functions for parts of a package entry.
+    - Dependency resolver supports Conflicts (request from joeyh@debian.org).
+    - Fix dependency resolver marker reset.
   * Stephen R. Marenka
     - Add scsi cd (scd?) device info to mapdevfs.
 
- -- Bastian Blank <waldi@debian.org>  Sun, 22 Feb 2004 17:29:42 +0100
+ -- Bastian Blank <waldi@debian.org>  Sat, 28 Feb 2004 00:08:53 +0100
 
 libdebian-installer (0.19) unstable; urgency=low
 
